<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:id="@+id/tableLayout"
    android:stretchColumns="1,2,3"
    android:padding="5dp"
    >

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tableRow0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/billTotal"
            android:id="@+id/billTextView"
            android:layout_gravity="right"
            android:paddingRight="5dp"
            android:paddingTop="10dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/billEditText"
            android:text="@string/zero"
            android:layout_span="3"
            android:textSize="14sp"
            android:inputType="numberDecimal"
            android:editable="false" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tableRow1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10%"
            android:id="@+id/tenTextView"
            android:textAlignment="inherit"
            android:layout_column="1"
            android:layout_gravity="center"
            android:paddingLeft="7dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="15%"
            android:id="@+id/fifteenTextView"
            android:textAlignment="center"
            android:layout_column="1"
            android:layout_gravity="center"
            android:paddingLeft="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="20%"
            android:id="@+id/twentyTextView"
            android:textAlignment="center"
            android:layout_column="1"
            android:layout_gravity="center"
            android:paddingLeft="7dp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tableRow2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip"
            android:id="@+id/tipTextView"
            android:layout_gravity="right"
            android:paddingRight="5dp"
            android:paddingTop="10dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tip10EditText"
            android:text="@string/zero"
            android:layout_gravity="center"
            android:textSize="14sp"
            android:editable="false"
            android:clickable="false"
            android:cursorVisible="false" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tip15EditText"
            android:text="@string/zero"
            android:layout_gravity="center"
            android:textSize="14sp"
            android:editable="false"
            android:clickable="false"
            android:cursorVisible="false" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tip20EditText"
            android:text="@string/zero"
            android:layout_gravity="center"
            android:textSize="14sp"
            android:editable="false"
            android:clickable="false"
            android:cursorVisible="false" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tableRow3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:id="@+id/totalTextView"
            android:layout_gravity="right"
            android:paddingRight="5dp"
            android:paddingTop="10dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/total10EditText"
            android:text="@string/zero"
            android:layout_gravity="center"
            android:textSize="14sp"
            android:editable="false"
            android:clickable="false"
            android:cursorVisible="false" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/total15EditText"
            android:text="@string/zero"
            android:layout_gravity="center"
            android:textSize="14sp"
            android:editable="false"
            android:clickable="false"
            android:cursorVisible="false" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/total20EditText"
            android:text="@string/zero"
            android:layout_gravity="center"
            android:textSize="14sp"
            android:editable="false"
            android:clickable="false"
            android:cursorVisible="false" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:id="@+id/tableRow4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/custom"
            android:id="@+id/customTextView"
            android:layout_gravity="right"
            android:paddingRight="5dp"
            android:gravity="center_vertical|right"
            android:paddingBottom="5dp" />

        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/customSeekBar"
            android:max="100"
            android:progress="18"
            android:layout_span="2"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingBottom="8dp"
            android:focusable="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/customTipTextView"
            android:text="18%"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:id="@+id/tableRow5">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tip"
            android:id="@+id/tipCustomTextView"
            android:layout_gravity="right"
            android:paddingRight="5dp"
            android:paddingTop="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tipCustomEditText"
            android:text="@string/zero"
            android:layout_gravity="center"
            android:textSize="14sp"
            android:editable="false"
            android:clickable="false"
            android:cursorVisible="false" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/total"
            android:id="@+id/totalCustomTextView"
            android:gravity="right"
            android:paddingTop="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/totalCustomEditText"
            android:text="@string/zero"
            android:layout_gravity="center"
            android:textSize="14sp"
            android:editable="false"
            android:clickable="false"
            android:cursorVisible="false" />
    </TableRow>

</TableLayout>